<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_permission_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/tv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_permission_close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_permission_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/file_access_permission"
        android:textColor="#333333"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/allow_fast_clean_accesses_apps_data_and_document_to_remove_junk"
        android:textColor="#666666"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:background="@drawable/bg_permission_dialog_text"
        android:gravity="center"
        android:text="@string/go"
        android:textColor="@color/white" />
</LinearLayout>