<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_permission_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/tv_close"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:src="@drawable/ic_permission_close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_permission_icon" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/file_access_permission"
        android:textColor="#333333"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/allow_fast_clean_accesses_apps_data_and_document_to_remove_junk"
        android:textColor="#666666"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/bg_permission_dialog_text"
        android:gravity="center"
        android:text="@string/go"
        android:textColor="@color/white" />
</LinearLayout>