<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFA"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:elevation="1dp"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_328"
                android:background="@drawable/bg_cleaned_main">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_center_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_cleaned_ok"
                    android:text="@string/accelerated_success"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_18"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_288"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/lay_cpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/bg_cleaned_cell">

                    <ImageView
                        android:id="@+id/iv_cpu"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_cpu_cooler" />

                    <TextView
                        android:id="@+id/tv_name_cpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_toEndOf="@id/iv_cpu"
                        android:text="@string/cpu_cooler"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_cpu"
                        android:layout_toEndOf="@id/iv_cpu"
                        android:text="@string/optimize_your_cpu_consuming_and_cool_your_phone"
                        android:textColor="#999999"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:id="@+id/tag1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_below="@id/iv_cpu"
                        android:layout_marginTop="@dimen/dp_15"
                        android:background="#F0F3F3" />

                    <TextView
                        android:id="@+id/tv_clean_cpu"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_below="@id/tag1"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/cool_now"
                        android:textColor="#2FD9C8"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lay_booster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/bg_cleaned_cell">

                    <ImageView
                        android:id="@+id/iv_booster"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_phone_booster" />

                    <TextView
                        android:id="@+id/tv_name_booster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/iv_booster"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/iv_booster"
                        android:text="@string/phone_booster"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_booster"
                        android:layout_toEndOf="@id/iv_booster"
                        android:text="@string/super_speed_up_your_phone"
                        android:textColor="#999999"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:id="@+id/tag2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_below="@id/iv_booster"
                        android:layout_marginTop="@dimen/dp_15"
                        android:background="#F0F3F3" />

                    <TextView
                        android:id="@+id/tv_clean_booster"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_below="@id/tag2"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/speed_up"
                        android:textColor="#2FD9C8"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lay_junk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/bg_cleaned_cell">

                    <ImageView
                        android:id="@+id/iv_junk"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_junk_clean" />

                    <TextView
                        android:id="@+id/tv_name_junk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/iv_junk"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/iv_junk"
                        android:text="@string/junk_clean"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_junk"
                        android:layout_toEndOf="@id/iv_junk"
                        android:text="@string/junk_need_to_be_clean"
                        android:textColor="#999999"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:id="@+id/tag3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_below="@id/iv_junk"
                        android:layout_marginTop="@dimen/dp_15"
                        android:background="#F0F3F3" />

                    <TextView
                        android:id="@+id/tv_clean_junk"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_below="@id/tag3"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/clean_now"
                        android:textColor="#2FD9C8"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lay_battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/bg_cleaned_cell">

                    <ImageView
                        android:id="@+id/iv_battery"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_12"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_battery" />

                    <TextView
                        android:id="@+id/tv_name_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_toEndOf="@id/iv_battery"
                        android:text="@string/battery_saver"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_battery"
                        android:layout_toEndOf="@id/iv_battery"
                        android:text="@string/battery_saving_master_save_phone_battery"
                        android:textColor="#999999"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:id="@+id/tag4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_below="@id/iv_battery"
                        android:layout_marginTop="@dimen/dp_15"
                        android:background="#F0F3F3" />

                    <TextView
                        android:id="@+id/tv_clean_battery"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_below="@id/tag4"
                        android:gravity="center"
                        android:text="@string/save_now"
                        android:textColor="#2FD9C8"
                        android:textSize="@dimen/sp_14" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
