<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scanning_animation"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/junk_clean"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.oneclean.android.booster.widget.viewgroup.EquilateralFrameLayout
        android:id="@+id/lay_tag1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lay_icon_container"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal" />

        <com.oneclean.android.booster.widget.viewgroup.EquilateralLottieAnimationView
            android:id="@+id/lav_animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="Phone Booster .json"
            app:lottie_loop="true"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:text="@string/complete"
            android:textColor="#333333"
            android:textSize="18sp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/iv_scanning_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0"
            android:background="@drawable/ic_scanning"
            android:contentDescription="@string/app_name"
            tools:ignore="ImageContrastCheck" />
    </com.oneclean.android.booster.widget.viewgroup.EquilateralFrameLayout>


    <TextView
        android:id="@+id/tv_animation_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/scanning..."
        android:textColor="#333333"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_tag1"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>